--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.25)
-project(GameTower1)
+project(GameTower)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(.)
 
-add_executable(GameTower1
+add_executable(GameTower
         FightScene.cpp
         FightScene.h
         init.h
@@ -13,4 +13,9 @@ add_executable(GameTower1
         main.cpp
         map.h
         Monster.cpp
-        Monster.h Backpack.h Item.h)
+        Monster.h Backpack.h Item.h
+        Item.cpp
+        Backpack.cpp
+        Hero.cpp
+        Word.cpp
+)
