--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.25)
 project(GameTower)
 
+set(CMAKE_EXE_LINKER_FLAGS -static)
 set(CMAKE_CXX_STANDARD 17)
+
 
 include_directories(.)
 
