push CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(GameTower
         src/Main.cpp
         src/Map.h
         src/Monster.h
+#        src/Monster.cpp
         src/Backpack.h
         src/Item.h
         src/Interface.h
-        src/Init.h)
+        src/Data.h)
